<resources>
    <string name="app_name">geoquiz</string>
    <string name="question_text">تهران پایتخت ایران است</string>
    <string name="button_false">نادرست</string>
    <string name="button_true">درست</string>

    <string name="toast_correct">جواب شما صحیح می باشد</string>
    <string name="toast_incorrect">جواب شما غلط می باشد</string>

    <string name="question_australia">استرالیا بزرگ ترین قاره جهان است.</string>
    <string name="question_oceans">اقیانوس آرام بزرگ ترین اقیانوس جهان است.</string>
    <string name="question_mideast">همه کشورهای خاورمیانه عرب زبان هستند.</string>
    <string name="question_africa">مصر در قاره آفریقا قرار دارد.</string>
    <string name="question_americas">کشور آمریکا پرجمعیت ترین کشور دنیا است.</string>
    <string name="question_asia">قاره آسیا در نیم کره جنوبی جهان واقع شده است.</string>
    <string name="button_cheat">تقلب</string>
    <string name="warning_text">آیا می خواهید تقلب کنید؟</string>
    <string name="button_show_answer">تقلب</string>
    <string name="toast_judgment">تقلب کار خوبی نیست</string>
    <string name="button_setting">تنظیمات</string>
    <string name="tv_size_text">Text Size</string>
    <string name="radio_button_small">Small</string>
    <string name="radio_button_medium">Medium</string>
    <string name="radio_button_large">Large</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>