<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".controller.SettingActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:padding="8dp"
        android:text="@string/tv_size_text"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <RadioButton
        android:id="@+id/radio_btn_small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/radio_button_small"
        android:textSize="18sp" />

    <RadioButton
        android:id="@+id/radio_btn_medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/radio_button_medium"
        android:textSize="18sp" />

    <RadioButton
        android:id="@+id/radio_btn_large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/radio_button_large"
        android:textSize="18sp" />
</LinearLayout>