<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".controller.MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="right|top"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|top"
            android:text="@string/button_setting" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"></LinearLayout>

    <TextView
        android:id="@+id/txtview_question_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8pt"
        android:textColor="#000000"
        android:textColorHighlight="#090909"
        android:textSize="18sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="2pt"
            android:text="@string/button_false"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2pt"
            android:text="@string/button_true"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"><![CDATA[

        />



        ]]>

        <ImageButton
            android:id="@+id/btn_prev"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="4dp"
            app:srcCompat="@drawable/ic_double_arrow_left" />

        <ImageButton
            android:id="@+id/btn_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            app:srcCompat="@drawable/ic_double_arrow_right" />/>
    </LinearLayout>

    <Button
        android:id="@+id/btn_cheat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_cheat"
        android:textSize="18sp"
        android:textStyle="bold" />

</LinearLayout>